"Also, body {margin: 0}"

--- a/Samples/Derpy Bird/index.html
+++ b/Samples/Derpy Bird/index.html
@@ -4,7 +4,7 @@
         <title>Derpy Bird</title>
         <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: black; margin: 0">
         <canvas id='display'></canvas>
         <script type='text/javascript' src='js/cgame-lib.js'></script>
         <script type='text/javascript' src='js/site.js'></script>
