--- a/Samples/Physics Demo/index.html
+++ b/Samples/Physics Demo/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background-color: black; margin: 0">
         <canvas id='display'></canvas>
-        <script type='text/javascript' src='js/cgame-lib.js'></script>
+        <script type='text/javascript' src='../../cgame-lib.js'></script>
         <script type='text/javascript' src='js/site.js'></script>
     </body>
 </html>
