--- a/Samples/Billiards/index.html
+++ b/Samples/Billiards/index.html
@@ -4,7 +4,7 @@
         <title>Billiards</title>
         <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
     </head>
-    <body style="background-color: black; margin: 0">
+    <body style="background-color: #0EBFE9; margin: 0">
         <canvas id='display'></canvas>
         <script type='text/javascript' src='../../cgame-lib.js'></script>
         <script type='text/javascript' src='js/site.js'></script>
